force-app/main/default/objects/CCAD_Config__mdt/CCAD_Config__mdt.object-meta.xml
<CustomObject>
    <label>CCAD Config</label>
    <pluralLabel>CCAD Configs</pluralLabel>
</CustomObject>