force-app/main/default/objects/CCAD_Config__mdt/fields/Dispute_ROR_System__c.field-meta.xml
<CustomField>
    <fullName>Dispute_ROR_System__c</fullName>
    <label>Dispute ROR System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCAD</fullName>
                <default>true</default>
                <label>CCAD</label>
            </value>
            <value>
                <fullName>SF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>