force-app/main/default/objects/CCAD_Config__mdt/fields/GetHeader_Max_Dispute_Count__c.field-meta.xml
<CustomField>
    <fullName>GetHeader_Max_Dispute_Count__c</fullName>
    <label>GetHeader Max Dispute Count</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>