force-app/main/default/objects/CCAD_Config__mdt/fields/Invoice_ROR_System__c.field-meta.xml
<CustomField>
    <fullName>Invoice_ROR_System__c</fullName>
    <label>Invoice ROR System</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ERP OnPremise</fullName>
                <default>true</default>
                <label>ERP OnPremise</label>
            </value>
            <value>
                <fullName>ERP Cloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>