force-app/main/default/objects/CCAD_Config__mdt/fields/Send_CCAD_emails__c.field-meta.xml
<CustomField>
    <fullName>Send_CCAD_emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send CCAD emails</label>
    <type>Checkbox</type>
</CustomField>